Give modals some extra width on smaller screen sizes, add a backdrop blur filter to modal backgrounds, and fix some small modal styling issues.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -889,6 +889,8 @@ div#modalBackground {
 	top: 0; bottom: 0;
 	left: 0; right: 0;
 	background-color: rgba(0, 0, 0, 0.3);
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
 }
 div#modal {
 	box-sizing: border-box;
@@ -1482,8 +1484,8 @@ form#formSignUp h2 {
 		margin-left: 13%;
 	}
 	div#modal h1 {
-		width: 74%;
-		left: 13%;
+		width: calc(74% - 2px);
+		left: calc(13% + 1px);
 	}
 
 	#stamps .stamp {
@@ -1559,6 +1561,15 @@ form#formSignUp h2 {
 	section#main blockquote footer {
 		margin-right: 40px;
 	}
+
+	div#modal {
+		width: 80%;
+		margin-left: 10%;
+	}
+	div#modal h1 {
+		width: calc(80% - 2px);
+		left: calc(10% + 1px);
+	}
 }
 
 @media screen and (max-width: 580px) {
@@ -1581,6 +1592,11 @@ form#formSignUp h2 {
 	div#conversation section#drawPanel img#onionSkin {
 		/*left: 0;*/
 		/*margin: 1px 0 0 21px;*/
+	}
+
+	div#conversation section#messages header h1 button#changeName span,
+	div#conversation section#messages header h1 button#editMembers span {
+		display: none;
 	}
 }
 
